crates/codegen/language/tests/src/fail/reachability/unused_version/test.stderr
error: Item 'Baz' is not used in versions: 1.0.0..2.0.0
  --> src/fail/reachability/unused_version/test.rs:21:28
   |
21 |                     name = Baz,
   |                            ^^^
